--- a/housing.ipynb
+++ b/housing.ipynb
@@ -722,24 +722,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "a6e63aaa",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'pipeline' from 'sklearn.pipeline' (C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\pipeline.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pipeline\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'pipeline' from 'sklearn.pipeline' (C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\pipeline.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.pipeline import pipeline"
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
